fix(utils): use Class.getResource to detect caller package directory